src/objects/CustomObject1__c.object
<CustomObject>
    <fields>
        <fullName>Account_Customer__c</fullName>
        <label>(Account) Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Candidates</relationshipLabel>
        <relationshipName>Candidates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Skill_Set__c</fullName>
        <label>Skill Set</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Python</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Android</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Skill_Set__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Participated</fullName>
                </value>
                <value>
                    <fullName>L1 Round Selected</fullName>
                </value>
                <value>
                    <fullName>L2 Round Selected</fullName>
                </value>
                <value>
                    <fullName>HR Round Selected</fullName>
                </value>
                <value>
                    <fullName>Final Rejected</fullName>
                </value>
                <value>
                    <fullName>Final Selected-Offer Released</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_years_Of_Experience__c</fullName>
        <label>Total years Of Experience</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Candidate</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Validation_For_Candidate</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Name )</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Name should be filled</errorMessage>
    </validationRules>
</CustomObject>